# CoreProject2025

./: CMakeLists.txt  README.MD
cmake/: submodule.cmake
src/: CMakeLists.txt  main.cpp
src/lib/cli/: CMakeLists.txt  argument_parser.cpp
src/lib/cli/include/core/lib/cli/: argument_parser.hpp
src/lib/cli/tests/: argument_parser_test.cpp
